--- a/Lections/Lection7_3/Lection7_3_ClassLoader/pom.xml
+++ b/Lections/Lection7_3/Lection7_3_ClassLoader/pom.xml
@@ -7,6 +7,13 @@
     <groupId>groupId</groupId>
     <artifactId>Lection7_3_ClassLoader</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
