--- a/Lections/Lection7_4_jdbc/pom.xml
+++ b/Lections/Lection7_4_jdbc/pom.xml
@@ -7,6 +7,12 @@
     <groupId>groupId</groupId>
     <artifactId>Lection7_4_jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
+        </dependency>
+    </dependencies>
     
 </project>
