Lection7_2_Loggers - Логгеры завелись после стольких днеей перерыва! Коммичу пока звелось. Заодно добавил javax.mail в version control.

--- a/Lections/Lection7_2_Loggers/pom.xml
+++ b/Lections/Lection7_2_Loggers/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 
