--- a/Lections/Lection7_2_Loggers/pom.xml
+++ b/Lections/Lection7_2_Loggers/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>Lection7_2_loggers</artifactId>
+    <artifactId>Lection7_2_Loggers</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
