--- a/Lections/Lection3/Lection3_CarShop/pom.xml
+++ b/Lections/Lection3/Lection3_CarShop/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>Lession03</artifactId>
+    <artifactId>Lection3_CarShop</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
