--- a/Lections/Lection3_3/Lection3_3_StudentsForWeb/web/WEB-INF/web.xml
+++ b/Lections/Lection3_3/Lection3_3_StudentsForWeb/web/WEB-INF/web.xml
@@ -3,4 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    <servlet>
+        <servlet-name>Student</servlet-name>
+        <servlet-class>controllers.StudentServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Student</servlet-name>
+        <url-pattern>Student</url-pattern>
+    </servlet-mapping>
 </web-app>
