--- a/Lections/Lection3_4/student_web_servlet/build.gradle
+++ b/Lections/Lection3_4/student_web_servlet/build.gradle
@@ -1,4 +1,4 @@
-group 'students'
+group 'students_web'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
@@ -13,13 +13,13 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
+    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
     // https://mvnrepository.com/artifact/jstl/jstl
     compile group: 'jstl', name: 'jstl', version: '1.2'
     // https://mvnrepository.com/artifact/log4j/log4j
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     // https://mvnrepository.com/artifact/javax.servlet/servlet-api
-    compile group: 'javax.servlet', name: 'servlet-api', version: '3.0.1'
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 
 
 }
