--- a/Lections/Lection5_2_Patterns/build.gradle
+++ b/Lections/Lection5_2_Patterns/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
 }
